--- a/src/WebApi/ECommerce.WebApi/appsettings.json
+++ b/src/WebApi/ECommerce.WebApi/appsettings.json
@@ -6,10 +6,10 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-PPIBP5O;Database=OnionDB;Trusted_Connection=True;"
+    "DefaultConnection": "Server=DESKTOP-PPIBP5O;Database=ECommerceDb;Trusted_Connection=True;"
   },
   "PostgreSql": {
-    "PostgreSqlConnection": "Host=localhost;Port=5432;Database=OnionDb;Username=postgres;Password=12345"
+    "PostgreSqlConnection": "Host=localhost;Port=5432;Database=ECommerceDb;Username=postgres;Password=12345"
   },
   "AllowedHosts": "*",
 
