--- a/src/Core/ECommerce.Application/ECommerce.Application.csproj
+++ b/src/Core/ECommerce.Application/ECommerce.Application.csproj
@@ -15,5 +15,9 @@
 	<ItemGroup>
 		<ProjectReference Include="..\ECommerce.Domain\ECommerce.Domain.csproj" />
 	</ItemGroup>
+	
+	<ItemGroup>
+	  <Folder Include="Features\OrderCommandQuery\Queries\GetOrdersById\" />
+	</ItemGroup>
 
 </Project>
