--- a/src/Infrastructure/ECommerce.Persistance/ECommerce.Persistance.csproj
+++ b/src/Infrastructure/ECommerce.Persistance/ECommerce.Persistance.csproj
@@ -10,6 +10,7 @@
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.6" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.6" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.6" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.6" />
 	</ItemGroup>
 
